2011-08-31  Jie Zhang  <jie.zhang@analog.com>

  * src/bus/blackfin.c (bfin_bus_new): Add new argument for default
    parameter values.  Update all callers.
  * src/bus/blackfin.h (bfin_bus_new): Update declaration.
    (bfin_bus_default_t): Typedef.
  * src/bus/bf537_stamp.c (bf537_stamp_defaults[]): New.
    (bf537_stamp_bus_new): Pass bf537_stamp_defaults to bfin_bus_new.
    (bf527_sdp): _BFIN_BUS_DECLARE.
  * src/bus/Makefile.am (libbus_la_SOURCES): Remove bf527_sdp.c.
  * src/bus/bf527_sdp.c: Remove.
  * src/global/params.c (urj_param_init_list): Add missing {, }.

2011-08-29  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/Makefile.am: Add a semicolon after the last sed command for
    compatibility with BSD sed implementations.  Patch by Xiangfu Liu.

2011-08-29  Jie Zhang  <jie.zhang@analog.com>

  * src/bus/buses_list.h: Add bf527_sdp.
  * src/bus/Makefile.am(libbus_la_SOURCES): Add bf527_sdp.c.
  * src/bus/bf527_sdp.c: New file.

2011-08-27  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/xc6slx45/STEPPINGS: Add stepping 3 by Xiangfu Liu.

2011-08-24  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/bus_driver.h, src/bus/buses.c: Add a new flag for write
    protect signals.
  * configure.in, src/bus/Makefile.am, src/bus/mpc8313.c: Add mpc8313 bus
    support by Márton Miklós.

  * src/tap/detect.c: Remove limitations on lengths of names in id records.

  * data/Makefile.am, data/lattice/PARTS,
    data/lattice/lcmxo2-1200-csbga132/STEPPINGS,
    data/lattice/lcmxo2-1200-csbga132/lcmxo2-1200-csbga132: Add support for
    LCMXO2-1200 CPLD's by Márton Miklós.

2011-08-20  Mike Frysinger  <vapier@gentoo.org>

  * data/Makefile.am, data/xilinx/PARTS, data/xilinx/xc95108/STEPPINGS,
    data/xilinx/xc95108/xc95108, data/xilinx/xc95108/xc95108_pc84,
    data/xilinx/xc95108/xc95108_pq100, data/xilinx/xc95108/xc95108_pq160,
    data/xilinx/xc95108/xc95108_tq100: Add data files for Xilinx xc95108
    FPGAs.  Patch by Steve Tell.
